clear all files to match report

--- a/ReadMe
+++ b/ReadMe
@@ -3,6 +3,9 @@ P3 adoption README
 Environment:
    Ubuntu 14.04
 
+Files:
+   
+
 How to execute: 
    Enter each directory and type the following command.
 
